--- a/todo.txt
+++ b/todo.txt
@@ -18,3 +18,5 @@ todo:
 * ensure all sorting is optimized and produces expected results.
 
 * pass all table headers through tabulate helper pad/newline function!
+
+* sanitize all input
