--- a/todo.txt
+++ b/todo.txt
@@ -21,6 +21,4 @@ todo:
 
 * sanitize all input
 
-* expand on contents scan filters and compatibility
-
-* remove csfx selection prompt and replace with stdin('-csfx')+1 argument
+* expand on contents scan filters and compatibility.
